No longer needed -1px margin for overlap

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -169,7 +169,6 @@ header
 	padding: .5em 1em .5em 1em
 	border-top-right-radius: $dates-border-radius
 	border-bottom-right-radius: $dates-border-radius
-	margin-left: -1px //gives appearance of overlapping col. rule
 	width: 3.25em
 	text-align: right
 	margin-bottom: 1.3em
